apps/arcs/zeta/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-zeta
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
