apps/arcs/zeta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observer-api
  namespace: arc-zeta
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: pulse-api.sagecraftalchemy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observer-api
                port:
                  number: 80
